@@ -5,8 +5,8 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.3.2'
-    classpath "com.github.ben-manes:gradle-versions-plugin:0.20.0"
+    classpath 'com.android.tools.build:gradle:3.4.2'
+    classpath "com.github.ben-manes:gradle-versions-plugin:0.22.0"
   }
 }
 
