@@ -1,3 +1,7 @@
+2019-08-19 (0.12.15)
+	ANDROID: fix issue with crash on minimise with googleos
+	ANDROID: update to androidx
+
 2019-07-27 (0.12.15)
 	SDL: added -n command line option to run then not pause for back key
 
